--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,18 @@
 }
 
 .search{
-  width:20em;
+  width:50vw;
+  font-size: 1.5em;
+  background:#333;
+  color:white;
+  text-align: center;
+}
+
+.summary{
+  padding:0 1em 0 1em;
+  text-align: center;
+  font-size:1em;
+  font-weight: 500;
 }
 
 @keyframes App-logo-spin {
