--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 }
 
 .search{
-  width:50vw;
-  font-size: 1.5em;
+  width:60vw;
+  font-size: 1.3em;
+  height:2em;
   background:#333;
   color:white;
   text-align: center;
