--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,10 @@
   background:#333;
   color:white;
   text-align: center;
-  margin-bottom:8px;
+  margin-bottom:1em;
+}
+.search::placeholder{
+  color:#f57f17;
 }
 
 .summary{
