added some silly animations

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,45 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 20vmin;
+.loader{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-o-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  background:#333;
+}
+
+.loader h2{
+	animation: animate 15s linear infinite;
+	background-image: url('https://i.postimg.cc/3JfYgrnj/water-2.png');
+	background-repeat: repeat-x;
+	color: rgba(255,255,255,.1);
+	font-size: 3em;
+	margin: 0;
+	padding: 0;
+	text-transform: uppercase;
+	-webkit-background-clip: text;
+}
+
+@keyframes animate{
+	0%{
+		background-position: left 0px top 150px;
+	}
+
+	40%{
+		background-position: left 600px top -30px;
+	}
+
+	80%{
+		background-position: left 1400px top -30px;
+	}
+
+	100%{
+		background-position: left 2000px top 150px;
+	}
 }
 
 .search{
