--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,23 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.loader{
+.loader {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	-webkit-transform: translate(-50%,-50%);
-	-ms-transform: translate(-50%,-50%);
-	-o-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-  background:#333;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	background: #333;
 }
 
-.loader h2{
+.loader h2 {
 	animation: animate 15s linear infinite;
 	background-image: url('https://i.postimg.cc/3JfYgrnj/water-2.png');
 	background-repeat: repeat-x;
-	color: rgba(255,255,255,.1);
+	color: rgba(255, 255, 255, 0.1);
 	font-size: 3em;
 	margin: 0;
 	padding: 0;
@@ -25,81 +25,88 @@
 	-webkit-background-clip: text;
 }
 
-@keyframes animate{
-	0%{
+@keyframes animate {
+	0% {
 		background-position: left 0px top 150px;
 	}
 
-	40%{
+	40% {
 		background-position: left 600px top -30px;
 	}
 
-	80%{
+	80% {
 		background-position: left 1400px top -30px;
 	}
 
-	100%{
+	100% {
 		background-position: left 2000px top 150px;
 	}
 }
 
-.eye{
-  position:fixed;
-  width:3em;
-  top:18px;
-  left:5px;
-  z-index: 5;
+.eye {
+	position: fixed;
+	width: 3em;
+	top: 18px;
+	left: 5px;
+	z-index: 5;
 }
 
-.blink {
-  animation: blink-animation 3s steps(3, start) infinite;
-  -webkit-animation: blink-animation 3s steps(3, start) infinite;
+.search {
+	width: 60vw;
+	font-size: 1.3em;
+	height: 2em;
+	background: #333;
+	color: white;
+	text-align: center;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
-@keyframes blink-animation {
-  to {
-    opacity: 0;
-  }
-}
-@-webkit-keyframes blink-animation {
-  to {
-    opacity: 0;
-  }
-}
-
-.search{
-  width:60vw;
-  font-size: 1.3em;
-  height:2em;
-  background:#333;
-  color:white;
-  text-align: center;
-  margin-top:1em;
-  margin-bottom:1em;
-}
-.search::placeholder{
-  color:#f57f17;
+.search::placeholder {
+	color: #f57f17;
 }
 
-.summary{
-  padding:0 1em 0 1em;
-  text-align: center;
-  font-size:1em;
-  font-weight: 500;
+.summary {
+	padding: 0 1em 0 1em;
+	text-align: center;
+	font-size: 1em;
+	font-weight: 500;
 }
 
-.results{
-  background:#333;
-  color:#f57f17;
-  border-radius:1em;
-  padding:8px;
-  font-size:1.2em;
+.results {
+	background: #333;
+	color: #f57f17;
+	border-radius: 1em;
+	padding: 8px;
+	font-size: 1.2em;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.showLink {
+	z-index: 2;
+	position: absolute;
+	margin-top: 265px;
+	margin-left: 150px;
+	color: white;
+}
+
+.view {
+	border-radius: 0.9em;
+  background: #0091ea;
+  color:white;
+  padding: 0.5em;
+  font-size:1em;
+}
+
+.shadow {
+	/* -webkit-box-shadow: 3px 3px 5px 6px #333; Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+	/* -moz-box-shadow: 3px 3px 5px 6px #333; Firefox 3.5 - 3.6 */
+	box-shadow: 3px 3px 5px 2px #333; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
